# retrospect

./: .env.zephyr  .gitignore  .gitmodules  .wasmbed-pids  CHANGELOG.md  COMPLETE_DEVICE_SYSTEM_SUMMARY.md  Cargo.docker.toml  Cargo.toml  DASHBOARD_COMPLETE_FIX.md  DASHBOARD_COMPLETE_IMPLEMENTATION.md  DASHBOARD_FIXES.md  DASHBOARD_VERIFICATION_REPORT.md  DEMO_GUIDE.md  DEVICE_CONNECTION_GUIDE.md  Dockerfile.api-server  Dockerfile.application-controller  Dockerfile.controller  Dockerfile.dashboard  Dockerfile.device  Dockerfile.device-controller  Dockerfile.gateway  Dockerfile.gateway-controller  ETHERNET_VS_WIFI_ANALYSIS.md  EXECUTION_COMPLETE_SUMMARY.md  HYBRID_SYSTEM_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOAD_BALANCING_SOLUTION.md  MOCK_DATA_GUIDE.md  QEMU_SYSTEM_COMPLETE.md  README.md  README_TO_BE_DONE.MD  REAL_COMMUNICATION_IMPLEMENTATION.md  SCALABILITY_RESULTS.md  cleanup-all.sh  deploy-complete.sh  manage-qemu-devices.sh  microros-bridge.wat  mock-gateway-deployment.yaml  qemu_devices.json  run-microROS-app.sh  (+17 more)
crates/wasmbed-api-server/: Cargo.toml
crates/wasmbed-api-server/src/: application_management.rs  device_management.rs  gateway_management.rs  main.rs
crates/wasmbed-application-controller/: Cargo.toml
crates/wasmbed-application-controller/src/: main.rs
crates/wasmbed-config/: Cargo.toml
crates/wasmbed-config-manager/: Cargo.toml
crates/wasmbed-config/src/: lib.rs
crates/wasmbed-dashboard/: Cargo.toml
crates/wasmbed-dashboard/src/: application_management.rs  device_management.rs  gateway_management.rs  main.rs  monitoring.rs  templates.rs
crates/wasmbed-device-controller/: Cargo.toml
crates/wasmbed-device-controller/src/: main.rs
crates/wasmbed-device-runtime/: Cargo.toml  TLS_INTEGRATION.md  TLS_STATUS.md  build.rs  memory.x  memory_nrf52840.x
crates/wasmbed-device-runtime/examples/: test_gateway_integration.rs  test_wasm_execution.rs  test_wasm_in_renode.rs
crates/wasmbed-device-runtime/src/: allocator.rs  enrollment_client.rs  getrandom_custom.rs  keypair_generator.rs  lib.rs  main.rs  startup.rs  tls_client.rs  tls_io.rs  wasm_interpreter.rs  wasm_parser_minimal.rs
crates/wasmbed-fastdds-middleware/: Cargo.toml
crates/wasmbed-fastdds-middleware/src/: lib.rs
crates/wasmbed-firmware-esp32/: Cargo.toml
crates/wasmbed-firmware-esp32/src/: application_manager.rs  main.rs  memory.rs  monitoring.rs  security.rs  serial_interface.rs  wasm_runtime.rs  wasmbed_client.rs  wifi_manager.rs
crates/wasmbed-firmware-hifive1-qemu/: Cargo.toml  build.rs  link.x  memory.x  run.sh
crates/wasmbed-firmware-hifive1-qemu/.cargo/: config.toml
crates/wasmbed-firmware-hifive1-qemu/src/: allocator.rs  application_manager.rs  handlers.rs  main.rs  monitoring.rs  serial_interface.rs  wasm_runtime.rs  wasmbed_client.rs
crates/wasmbed-gateway/: Cargo.toml  Dockerfile
crates/wasmbed-gateway-controller/: Cargo.toml
crates/wasmbed-gateway-controller/src/: main.rs
crates/wasmbed-gateway-test-client/: Cargo.toml
crates/wasmbed-gateway-test-client/src/: main.rs
crates/wasmbed-gateway/src/: deployment.rs  enrollment.rs  http_api.rs  local_cache.rs  main.rs  main_simple.rs
crates/wasmbed-infrastructure/: Cargo.toml
crates/wasmbed-infrastructure/src/: certificate_authority.rs  logging.rs  main.rs  monitoring.rs  secret_store.rs
crates/wasmbed-integration-test/: Cargo.toml
crates/wasmbed-integration-test/src/: main.rs
crates/wasmbed-k8s-controller/: Cargo.toml  Dockerfile
crates/wasmbed-k8s-controller/src/: main.rs
crates/wasmbed-microros-bridge/: Cargo.toml  Dockerfile
crates/wasmbed-microros-bridge/src/: lib.rs  main.rs
crates/wasmbed-protocol-server/: Cargo.toml
crates/wasmbed-protocol-server/src/: lib.rs
crates/wasmbed-px4-communication/: Cargo.toml
crates/wasmbed-px4-communication/src/: lib.rs
crates/wasmbed-qemu-deployment/: Cargo.toml
crates/wasmbed-qemu-deployment/src/: lib.rs
crates/wasmbed-qemu-manager/: Cargo.toml
crates/wasmbed-qemu-manager/src/: lib.rs  main.rs
crates/wasmbed-qemu-serial-bridge/: Cargo.toml
crates/wasmbed-qemu-serial-bridge/examples/: qemu_integration.rs
crates/wasmbed-qemu-serial-bridge/src/: firmware_manager.rs  lib.rs  main.rs  qemu_manager.rs
crates/wasmbed-tls-utils/: Cargo.toml  README.md
crates/wasmbed-tls-utils/examples/: custom-tls-example.rs  tls-utils-example.rs
crates/wasmbed-tls-utils/src/: lib.rs
crates/wasmparser-nostd-fork/: Cargo.toml
crates/wasmparser-nostd-fork/src/: binary_reader.rs  indexmap_compat.rs  lib.rs  limits.rs  parser.rs  readers.rs  resources.rs  validator.rs
crates/wasmparser-nostd-fork/src/readers/: component.rs  core.rs
crates/wasmparser-nostd-fork/src/readers/component/: aliases.rs  canonicals.rs  exports.rs  imports.rs  names.rs  (+3 more)
crates/wasmparser-nostd-fork/src/validator/: component.rs  core.rs  func.rs  names.rs  operators.rs  types.rs
crates/wasmparser-nostd-fork/wasmparser-source/: .cargo_vcs_info.json  Cargo.toml
firmware/: Cargo.toml
retrospect/crates/wasmbed-gateway/: Cargo.toml  Dockerfile
retrospect/crates/wasmbed-gateway/src/: heartbeat.rs  http_api.rs  main.rs  tls_server.rs
retrospect/crates/wasmbed-wasm-runtime/: Cargo.toml
retrospect/crates/wasmbed-wasm-runtime/examples/: simple_test.rs
retrospect/crates/wasmbed-wasm-runtime/src/: context.rs  error.rs  security.rs  tests.rs  validation.rs
retrospect/crates/wasmbed-wasm-runtime/test_data/: simple.wat
retrospect/firmware/: Cargo.toml  EMBEDDED_TLS_INTEGRATION.md  FIRMWARE_COMPLETE.md  README.md  arm_cortex_m_minimal.S  build-firmware-simple.sh  build-firmware.sh  firmware_arduino_nano_33_ble.rs  memory.x  mps2-an385.dts  test-firmware.sh
retrospect/firmware/src/: hardware.rs  main.rs  network.rs  tls_client.rs  tls_client_real.rs  wasm_runtime.rs
zephyr-app/: .gitignore  CMakeLists.txt  prj.conf
zephyr-app/examples/simple_wasm/: test_simple.c  test_simple.wat
zephyr-app/examples/wamr_example/: wamr_example.c
zephyr-app/src/: main.c  network_handler.c  network_handler.h  wamr_integration.c  wamr_integration.h  wasmbed_protocol.c  wasmbed_protocol.h
(+739 files in other folders)
