[package]
name = "wasmbed-firmware-arduino-nano-33-ble"
version = "0.1.0"
edition = "2021"

[dependencies]
        # TLS and networking
        rustls = { version = "0.23", features = ["ring"] }
        rustls-pemfile = "2.0"
        tokio = { version = "1.0", features = ["full"] }

# Serialization
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }

# WASM runtime
wasmtime = "18.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

[[bin]]
name = "firmware_arduino_nano_33_ble"
path = "firmware_arduino_nano_33_ble.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
