[package]
name = "wasmbed-api-server"
version = "0.1.0"
edition = "2021"
authors = ["Wasmbed contributors"]
license = "AGPL-3.0"
description = "API Server for Wasmbed platform orchestration"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "tracing", "ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip", "timeout", "set-header"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# WebSocket support
tokio-tungstenite = "0.20"

# Template engine
askama = "0.12"

# Kubernetes client
kube = { version = "1.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["v1_33"] }

# Async traits
async-trait = "0.1"

# Schema generation
schemars = "0.8"

# Wasmbed resources
wasmbed-k8s-resource = { path = "../wasmbed-k8s-resource" }
wasmbed-qemu-manager = { path = "../wasmbed-qemu-manager" }

# CLI argument parsing
clap = { version = "4.4", features = ["env", "derive"] }

[dev-dependencies]
tokio-test = "0.4"
