[package]
name = "wasmbed-application-controller"
version = "0.1.0"
edition = "2021"
authors = ["Wasmbed contributors"]
license = "AGPL-3.0"
description = "Application Controller for Wasmbed platform"

[dependencies]
# Kubernetes client
kube = { version = "1.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["v1_33"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async traits
async-trait = "0.1"

# Schema generation
schemars = "0.8"

# Wasmbed resources
wasmbed-k8s-resource = { path = "../wasmbed-k8s-resource" }

# Base64 encoding
base64 = "0.21"

# TLS
rustls = { version = "0.23", features = ["aws_lc_rs"] }

[dev-dependencies]
tokio-test = "0.4"
