[package]
name = "wasmbed-config-manager"
version = "0.1.0"
edition = "2021"
authors = ["Wasmbed Contributors"]
license = "AGPL-3.0"
description = "Configuration management CLI for Wasmbed platform"
repository = "https://github.com/wasmbed/wasmbed"
keywords = ["wasm", "edge", "iot", "configuration", "cli"]
categories = ["command-line-utilities", "configuration"]

[[bin]]
name = "wasmbed-config"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
wasmbed-config = { path = "../wasmbed-config" }
anyhow = "1.0"
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"
