[package]
name = "wasmbed-config"
version = "0.1.0"
edition = "2021"
authors = ["Wasmbed Contributors"]
license = "AGPL-3.0"
description = "Configuration management for Wasmbed platform"
repository = "https://github.com/wasmbed/wasmbed"
keywords = ["wasm", "edge", "iot", "configuration"]
categories = ["configuration", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
