[package]
name = "wasmbed-dashboard"
version = "0.1.0"
edition = "2021"
authors = ["Wasmbed contributors"]
license = "AGPL-3.0"
description = "Dashboard for Wasmbed platform orchestration"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "tracing", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket support
tokio-tungstenite = "0.20"

# Template engine
askama = "0.12"

# Kubernetes client
kube = { version = "1.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["v1_33"] }

# Async traits
async-trait = "0.1"

# Schema generation
schemars = "0.8"

# Wasmbed resources
wasmbed-k8s-resource = { path = "../wasmbed-k8s-resource" }

# CLI argument parsing
clap = { version = "4.4", features = ["env"] }

[dev-dependencies]
tokio-test = "0.4"
