[package]
name = "wasmbed-device-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Wasmbed contributors"]
license = "AGPL-3.0"
description = "Device Runtime no_std implementation for Wasmbed platform"
build = "build.rs"

[profile.release]
panic = "abort"

# Linker script is now handled by build.rs
# [target.thumbv7em-none-eabihf]
# rustflags = [
#     "-C", "link-arg=-Tmemory.x",
#     "-C", "link-arg=-nostartfiles",
# ]

[dependencies]
# Core no_std dependencies
heapless = "0.8"

# Logging (no_std)
log = "0.4"

# Protocol support (no_std compatible)
wasmbed-protocol = { path = "../wasmbed-protocol", default-features = false, features = ["alloc"] }

# TLS support for no_std (optional, enabled with "tls" feature)
# Using embedded-tls 0.17 (standalone TLS implementation, no rustls dependency)
# Note: UnsecureProvider requires std feature
embedded-tls = { git = "https://github.com/fratrung/embedded-tls.git", optional = true, features = ["std"], default-features = true }
embedded-io = { version = "0.5", optional = true }
signature = { version = "2.2", default-features = false, optional = true }

# Network stack for no_std (smoltcp) - Note: requires no_std compatible version
# Using smoltcp with no_std features - may need custom fork or alternative approach
# smoltcp = { version = "0.12", default-features = false, features = ["alloc", "proto-ipv4", "socket-tcp", "socket-icmp", "phy-raw_socket"], optional = true }

# CBOR encoding/decoding (no_std compatible)
minicbor = { version = "1.1", default-features = false, optional = true }  # Match wasmbed-protocol version
serde_cbor = { version = "0.11", default-features = true, optional = true }  # std required

# Allocator for no_std (for future use with custom parser)
linked_list_allocator = { version = "0.10", default-features = false }
spin = "0.9"

# Custom getrandom backend for no_std
getrandom = { version = "0.2", features = ["custom"] }
rand_core = { version = "0.6", default-features = false, optional = true }

# WASM parsing and execution
# Using minimal custom parser (no_std compatible, no external dependencies)
# wasmparser-nostd-fork = { path = "../wasmparser-nostd-fork" }  # In progress

# Optional dependencies for std builds only
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
anyhow = { version = "1.0", default-features = false, optional = true }
chrono = { version = "0.4", features = ["serde"], default-features = false, optional = true }
base64 = { version = "0.21", default-features = false, optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], default-features = false, optional = true }
async-trait = { version = "0.1", default-features = false, optional = true }
futures = { version = "0.3", default-features = false, features = ["async-await"], optional = true }
embedded-hal = { version = "1.0", optional = true }
nb = { version = "1.0", optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }

# TLS for std builds (rustls)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-pemfile = { version = "2.0", optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
default = ["std"]
std = ["serde", "anyhow", "chrono", "base64", "uuid", "async-trait", "futures", "embedded-hal", "nb", "sha2", "anyhow/std", "serde/std", "chrono/std", "base64/std", "sha2/std", "minicbor", "serde_cbor", "rustls", "rustls-pemfile", "webpki-roots"]
tls = ["embedded-tls", "embedded-io", "minicbor", "rand_core", "signature"]
network = []  # Placeholder for future network stack integration

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "test_wasm_interpreter"
path = "tests/test_wasm_interpreter.rs"

[[test]]
name = "test_real_communication"
path = "tests/test_real_communication.rs"
