[package]
name = "wasmbed-fastdds-middleware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# DDS dependencies
rustdds = "0.11"

# Async runtime
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
dashmap = "5.0"

# Logging
log = "0.4"

# Serialization
postcard = "1.0"

# Network
tokio-util = "0.7"

[dev-dependencies]
tokio-test = "0.4"
