[package]
name = "wasmbed-firmware-esp32"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "wasmbed-firmware-esp32"
test = false

[dependencies]
# WASM runtime
wasmi = "0.17"

# Protocol and types
wasmbed-protocol = { path = "../wasmbed-protocol", features = ["alloc"] }
wasmbed-types = { path = "../wasmbed-types", features = ["alloc", "cert"] }
wasmbed-tls-utils = { path = "../wasmbed-tls-utils" }

# Async runtime (simplified)
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "net"] }

# Networking (simplified)
reqwest = { version = "0.11", features = ["json"] }

# Crypto
rustls = "0.23"
rustls-pemfile = "1.0"
rustls-webpki = "0.103"
ed25519-dalek = "2.0"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minicbor = "1.0"

# Utilities
anyhow = "1.0"
log = "0.4"
tokio-util = "0.7"
env_logger = "0.10"
thiserror = "1.0"
