[package]
name = "wasmbed-firmware-esp32"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "wasmbed-firmware-esp32"
test = false

[dependencies]
panic-halt = "1.0.0"
esp32-hal = "0.18.0"
heapless = "0.8"

# WASM Runtime dependencies (simulated for no_std)
# wasmi = "0.17"  # Not available for no_std targets