[package]
name = "wasmbed-firmware-hifive1-qemu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "wasmbed-firmware-hifive1-qemu"
test = false

[dependencies]
panic-halt = "1.0.0"
riscv = "0.13.0"

[dependencies.riscv-rt]
version = "0.13.0"
features = [ "single-hart" ]

# WASM Runtime dependencies (simulated for no_std)
# wasmi = "0.17"  # Not available for no_std targets
