[package]
name = "wasmbed-firmware-hifive1-qemu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "wasmbed-firmware-hifive1-qemu"
test = false

[dependencies]
panic-halt = "1.0.0"
riscv = "0.13.0"
heapless = "0.8"

[dependencies.riscv-rt]
version = "0.13.0"
features = [ "single-hart" ]

# WASM Runtime dependencies (no_std compatible)
# wasm3 = "0.5"  # Temporarily disabled
