[package]
name = "wasmbed-gateway-test-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.98"

[dependencies.clap]
version = "4.5.40"
features = [ "derive" ]

[dependencies.rustls-pki-types]
version = "1.12.0"
default-features = false

[dependencies.wasmbed-tls-utils]
path = "../wasmbed-tls-utils"

[dependencies.wasmbed-cert]
path = "../wasmbed-cert"

[dependencies.wasmbed-types]
path = "../wasmbed-types"

[dependencies.wasmbed-protocol]
path = "../wasmbed-protocol"
features = ["alloc"]

[dependencies.wasmbed-protocol-server]
path = "../wasmbed-protocol-server"

[dependencies.minicbor]
version = "1.0.0"
default-features = false
features = ["alloc"]

[dependencies.tokio]
version = "1.45.1"
features = [ "macros", "rt-multi-thread", "net" ]
