[package]
name = "wasmbed-gateway-test-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.98"

[dependencies.clap]
version = "4.5.40"
features = [ "derive" ]

[dependencies.rustls-pki-types]
version = "1.12.0"
default-features = false
[dependencies.aes-gcm]
version = "0.10.3"
default-features = false
features = ["aes", "alloc"]

[dependencies.chacha20poly1305]
version = "0.10.1"
default-features = false
features = ["alloc"]

[dependencies.ed25519-dalek]
version = "2.1.0"
default-features = false

[dependencies.x25519-dalek]
version = "2.0.0"
default-features = false

[dependencies.sha2]
version = "0.10.7"
default-features = false

[dependencies.hkdf]
version = "0.12.4"
default-features = false

[dependencies.hmac]
version = "0.12.1"
default-features = false

[dependencies.wasmbed-tls-utils]
path = "../wasmbed-tls-utils"

[dependencies.wasmbed-cert]
path = "../wasmbed-cert"

[dependencies.wasmbed-types]
path = "../wasmbed-types"

[dependencies.wasmbed-protocol]
path = "../wasmbed-protocol"
features = ["alloc"]

[dependencies.wasmbed-protocol-server]
path = "../wasmbed-protocol-server"

[dependencies.minicbor]
version = "1.0.0"
default-features = false
features = ["alloc"]

[dependencies.tokio]
version = "1.45.1"
features = [ "macros", "rt-multi-thread", "net" ]
