[package]
name = "wasmbed-k8s-controller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Kubernetes dependencies (latest compatible versions)
kube = { version = "1.1", features = ["runtime", "derive", "client", "openssl-tls"], default-features = false }
kube-runtime = "1.1"
k8s-openapi = { version = "0.25", features = ["v1_33"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Base64 encoding
base64 = "0.22"

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"], default-features = false }

# HTTP server for health checks
axum = "0.7"

# Stream utilities for controller
futures-util = "0.3"

# Error handling
thiserror = "1.0"

# Our crates
wasmbed-k8s-resource = { path = "../wasmbed-k8s-resource", features = ["client"] }
wasmbed-protocol = { path = "../wasmbed-protocol" }
wasmbed-types = { path = "../wasmbed-types" }

[lints]
workspace = true
