[package]
name = "wasmbed-microros-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# DDS dependencies
rustdds = "0.11"

# ROS 2 dependencies (commented out - requires ROS 2 installation)
# r2r = "0.9"
# ros2-client = "0.8"

# PX4 dependencies
px4 = "0.2"

# Async runtime
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP API dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Collections
dashmap = "5.0"

[dev-dependencies]
tokio-test = "0.4"
