[package]
name = "wasmbed-protocol-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
futures = "0.3.31"
tokio-util = "0.7.15"
tracing = "0.1.41"

[dependencies.derive_more]
version = "2.0.1"
default-features = false
features = [ "display", "error" ]

[dependencies.minicbor]
version = "1.0.0"
default-features = false
features = [ "alloc" ]

# RustCrypto dependencies
[dependencies.aes-gcm]
version = "0.10.3"
default-features = false
features = ["aes", "alloc"]

[dependencies.chacha20poly1305]
version = "0.10.1"
default-features = false
features = ["alloc"]

[dependencies.ed25519-dalek]
version = "2.1.0"
default-features = false

[dependencies.x25519-dalek]
version = "2.0.0"
default-features = false

[dependencies.sha2]
version = "0.10.7"
default-features = false

[dependencies.hkdf]
version = "0.12.4"
default-features = false

[dependencies.hmac]
version = "0.12.1"
default-features = false

[dependencies.tokio]
version = "1.45.1"
features = [ "io-util", "macros", "net", "rt", "time", "sync" ]

[dependencies.wasmbed-tls-utils]
path = "../wasmbed-tls-utils"

[dependencies.wasmbed-cert]
path = "../wasmbed-cert"

[dependencies.wasmbed-protocol]
path = "../wasmbed-protocol"

[dependencies.wasmbed-types]
path = "../wasmbed-types"
features = [ "base64", "cert", "x509" ]
