[package]
name = "wasmbed-px4-communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# microROS bridge dependency
wasmbed-microros-bridge = { path = "../wasmbed-microros-bridge" }

# FastDDS middleware dependency
wasmbed-fastdds-middleware = { path = "../wasmbed-fastdds-middleware" }

# MAVLink dependencies - using newer versions to avoid xml-rs issues
mavlink = "0.15"
mavlink-dialects = "0.6"
# async-mavlink = "0.1"  # Commented out due to xml-rs dependency issues

# PX4 dependencies
# px4 = "0.2"  # Commented out due to rustc-serialize dependency issues

# Async runtime
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
dashmap = "5.0"

# Logging
log = "0.4"

# Serialization
bincode = "1.3"
# cbor = "0.1"  # Commented out due to rustc-serialize dependency

# Network
tokio-util = "0.7"

[dev-dependencies]
tokio-test = "0.4"
