[package]
name = "wasmbed-qemu-serial-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

# Additional dependencies for QEMU integration
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

# Local dependencies
wasmbed-protocol = { path = "../wasmbed-protocol" }
wasmbed-types = { path = "../wasmbed-types" }

[[bin]]
name = "wasmbed-qemu-serial-bridge"
path = "src/main.rs"
