[package]
name = "wasmbed-qemu-serial-bridge"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "TCP serial bridge for QEMU ARM Cortex-M communication"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

