[package]
name = "wasmbed-tls-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "1.0", default-features = false }
rustls-pki-types = "1.12.0"
rustls = "0.23"
log = "0.4"

# For PEM parsing
pem = "3.0"

# For certificate parsing and generation
x509-parser = "0.16"
x509-cert = { version = "0.2", features = ["builder"] }

# For cryptographic operations
ed25519-dalek = "2.0"
rand = "0.8"
rand_core = "0.6"

# For async networking
tokio = { version = "1.47", features = ["net", "io-util", "macros", "rt-multi-thread", "time"] }

# For examples
env_logger = "0.11"

# For compatibility with existing code
tokio-util = "0.7"

# For protocol types
wasmbed-protocol = { path = "../wasmbed-protocol", features = ["alloc"] }

[[example]]
name = "tls-utils-example"
path = "examples/tls-utils-example.rs"

[[example]]
name = "custom-tls-example"
path = "examples/custom-tls-example.rs"
