[package]
edition = "2021"
name = "wasmparser-nostd-fork"
version = "0.118.2"
authors = ["Wasmbed contributors"]
description = "Fork of wasmparser without semver for no_std support"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser"

[dependencies]
indexmap-nostd = { version = "0.4.0", package = "indexmap-nostd", default-features = false }
hashbrown = { version = "0.14", default-features = false }

[dev-dependencies]
anyhow = "1.0"
criterion = "0.3"
env_logger = "0.9"
log = "0.4"
once_cell = "1.13"
rayon = "1.3"
wasm-encoder = "0.38"
